# ams

./: .gitignore  Cargo.toml  config.toml
.github/: dependabot.yml
data/: addresses.data  city_limits.data  city_limits_view.data  lexis_nexis_boundary.data
src/: address.rs  app.rs  boundaries.rs  convert.rs  data.rs  lib.rs  main.rs  ops.rs  parcels.rs  run.rs  run_ui.rs  tab.rs  table.rs  utils.rs
src/controls/: act.rs  command.rs  focus.rs  mod.rs
src/state/: egui_state.rs  eponym.rs  galileo_state.rs  lens.rs  mod.rs
tests/: test.rs
