[package]
name = "ams"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ams"

[dependencies]
address = { git = "https://github.com/grantspassoregon/address.git" }
# aid = { path = "../aid", default-features = false, features = ["bin", "img", "win"] }
aid = { git = "https://github.com/grantspassoregon/aid.git", default-features = false, features = ["bin", "img", "gis", "gpu", "win"] }
bincode = "1.3.3"
csv = "1.3.0"
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
egui_dock = { version = "0.12.0", features = ["serde"] }
galileo = { git = "https://github.com/Maximkaaa/galileo" }
galileo-types = { git = "https://github.com/Maximkaaa/galileo" }
geo = "0.28.0"
geo-types = "0.7.13"
geojson = "0.24.1"
geozero = "0.12.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
num-traits = "0.2.18"
# polite = { path = "../cordial/polite", default-features = false, features = ["bin", "img", "gis", "win"] }
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
spreadsheet = { git = "https://github.com/grantspassoregon/spreadsheet" }
shapefile = "0.6.0"
tokio = { version = "1.37.0", features = ["tokio-macros", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "0.20.0"
winit = "0.30.0"
itertools = "0.12.1"
egui_extras = { version = "0.27.2", features = ["file", "chrono", "datepicker", "image"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
rfd = { version = "0.14.1", features = ["tokio"] }
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
strum_macros = "0.26.2"
image = "0.25.1"
geozero-shp = "0.4.0"
